...
                            <constraint firstItem="0eb-Rf-tvW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="vPk-Wu-4Ou"/>
                            <constraint firstItem="Hiq-u6-63f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="w0I-Js-5kP"/>
                            <constraint firstItem="Hiq-u6-63f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="xPW-9u-Dou"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="lG2-Ne-Vtv">
                        <barButtonItem key="rightBarButtonItem" title="Reload" id="xgB-oY-gxk">
                            <connections>
                                <action selector="reloadButton:" destination="BYZ-38-t0r" id="sDu-16-44S"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
